<resources>
    <string name="app_name" translatable="false">Pass On Messages</string>
    <string name="app_name_short" translatable="false">Pass On MSGs.</string>
    <string name="sms_permission_denied">"SMS permission denied. Cannot send SMS."</string>
    <string name="filter_name">Filter Name</string>
    <string name="add_rule">Add Another Rule</string>
    <string name="add_new_filter">Add New Filter</string>
    <string name="enter_phrase">Enter phrase</string>
    <string name="delete_rule">Delete Rule</string>
    <string name="export_filters">Export Filters</string>
    <string name="import_filters">Import Filters</string>
    <string name="toast_export_success">Exporting filters was successful.</string>
    <string name="toast_export_fail">Exporting filters failed.</string>
    <string name="toast_import_success">Importing filters was successful.</string>
    <string name="toast_import_fail">Importing filters failed.</string>

    <!-- Edit/Delete Dialog -->
    <string name="save">Save</string>
    <string name="modify_filter">Modify Filter</string>
    <string name="rules_condition_description">(All rules must be met)</string>
    <string name="dialog_title_delete_filter">Delete Filter</string>
    <string name="dialog_message_delete_filter">Are you sure you want to delete this filter?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!-- Import Confirmation Dialog -->
    <string name="dialog_message_import_confirmation">Existing filters will be deleted. Do you want to continue?</string>
    <string name="continue_btn">Continue</string>

    <!-- Filter Item -->
    <string name="name">Name</string>
    <string name="pass_on_to">Pass on to</string>
    <string name="rules">Rules</string>
    <string name="recent">Recent</string>
    <string name="delete_filter">Delete Filter</string>

    <!-- Rule Type -->
    <string name="rule_type_title_contains">Title Contains</string>
    <string name="rule_type_title_is">Title is</string>
    <string name="rule_type_text_contains">Text Contains</string>
    <string name="rule_type_text_not_contains">Text Not Contains</string>

    <!-- Debug Mode -->
    <string name="debug_mode" translatable="false">Debug Mode</string>
    <string name="event_logging_title" translatable="false">Event Logging</string>
    <string name="event_logging_switch" translatable="false">Enable Event Logging</string>
    <string name="event_loggin_summary" translatable="false">When turning off, exporting log</string>
</resources>
